@@ -6,6 +6,13 @@ POE::Component::IRC::Plugin::RTorrentStatus - A PoCo-IRC plugin which prints RTo
 
 =head1 SYNOPSIS
 
+To quickly get an IRC bot with this plugin up and running, you can use
+L<App::Pocoirc|App::Pocoirc>:
+
+ $ pocoirc -s irc.perl.org -j '#bots' -p 'RTorrentStatus{ "Channels": ["#bots"] }'
+
+Or use it in your code:
+
  use POE::Component::IRC::Plugin::RTorrentStatus;
 
  # post status updates to #foobar
