@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Mention App::Pocoirc in the SYNOPSIS
 
 0.07  Mon Sep 6 04:39:40 GMT 2010
     - Fix erroneous dependency on the FollowTail plugin
